Fix link in dark mode

--- a/SwanHub/swanhub/static/css/style.less
+++ b/SwanHub/swanhub/static/css/style.less
@@ -38,7 +38,6 @@ body {
 a,
 a:active,
 a:focus {
-    color: @color-primary;
     text-decoration: none;
 }
 
